<resources>
    <string name="app_name">网上厨房</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="test">
        <item>"ssssss"</item>
        <item>ssssss</item>
        <item>ssssss</item>
        <item>ssssss</item>
        <item>ssssss</item>
        <item>ssssss</item>
        <item>ssssss</item>
        <item>ssssss</item>
        <item>ssssss</item>
        <item>ssssss</item>
    </string-array>

    <!--  LH -->
    <string name="my_fragment_word1">拥有一个网上厨房账号</string>
    <string name="my_fragment_word2">结交各路厨神</string>
    <string name="my_fragment_word3">\t你将可以\t</string>
    <string name="my_fragment_word4">参加各种有奖活动</string>
    <string name="my_fragment_word5">在线收藏菜谱和专辑\t\t\t</string>
    <string name="my_fragment_word6">积分兑换奖品</string>
    <string name="my_fragment_word7">更多意想不到的美好</string>
    <string name="my_fragment_btn">注册/登录</string>
    <string name="my_fragment_title">我的</string>
    <string name="attention_fragment_cancer">取消</string>
    <string name="attention_fragment_title">一键登录</string>
    <string name="attention_fragment_word1">手机号</string>
    <string name="attention_fragment_phone">请输入手机号</string>
    <string name="attention_fragment_login">登录</string>
    <string name="attention_fragment_word2">登录后可以同步菜谱、交朋友、赚厨币当钱花</string>
    <string name="attention_fragment_word3">新浪登录</string>
    <string name="attention_fragment_word4">QQ登录</string>
    <string name="attention_fragment_word5">邮箱登录</string>

    <!--cy begain 07.13-->
    <string name="cookbook_top">菜谱</string>
    <string name="cookbook_fresh">新鲜菜</string>
    <string name="cookbook_hot">周最热</string>
    <string name="cookbook_diy">自制下午茶</string>
    <!--cy end -->


    <!-- TODO: CookSpeak -->
    <string name="cookspeak_word1">厨说</string>
    <string name="cookspeak_word2">广场</string>
    <string name="cookspeak_word3">关注</string>
    <string name="cookspeak_word4">猫猫</string>
    <string name="cookspeak_word5">美好的一天从早餐开始！</string>
    <string name="cookspeak_word6">#早餐#</string>
    <string name="cookspeak_word7">#午餐#</string>
    <string name="cookspeak_word8">#晚餐#</string>
    <string name="cookspeak_word9">#舌尖上的G20德国站#</string>
    <!-- TODO: CookSpeak -->

    <!-- TODO:第三方登录 -->
    <integer name="app_version_code">2</integer>

    <string name="app_version">2.0.0</string>
    <string name="proj_name">ShareSDK_TPL</string>
    <string name="share_sdk">Share SDK</string>
    <string name="login_with_msg">用手机号码登录</string>
    <string name="login_with_weixin">用微信登录</string>
    <string name="login_with_sina_weibo">用新浪微博登录</string>
    <string name="login_with_qzone">用QQ空间登录</string>
    <string name="login_with_other_plat">其他帐号登录</string>
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出; \n 如微信登录，需要微信客户端</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="if_register_needed">如果您需要注册功能…</string>
    <string name="after_auth">一般来说第三方登录时，第三方平台已经为您完成用户身份校验，您可以放心让用户登录。\n\n但如果您需要判断用户是否为新用户，可以在授权操作完成后，将用户的信息通过字段“HashMap userInfo”携带给login方法。客户端通过“String userId”执行登录请求，如果服务端判定此userId为未注册用户，可以将userInfo发送给注册接口，获取用户在此平台上的昵称、头像等数据，然后执行注册</string>

    <string name="tpl_ok">确定</string>
    <string name="tpl_cancel">取消</string>

    <string name="tpl_key_user_icon">头像</string>
    <string name="tpl_key_user_name">昵称</string>
    <string name="tpl_key_user_gender">性别</string>
    <string name="tpl_key_user_note">备注</string>

    <string name="tpl_value_user_name">昵称</string>
    <string name="tpl_value_user_gender">性别</string>
    <string name="tpl_value_user_note">请填写备注信息</string>

    <string name="tpl_sign_user_info">用户信息</string>
    <string name="tpl_sign_up">注册</string>
    <string name="tpl_girl">女</string>
    <string name="tpl_boy">男</string>

    <string name="tpl_camera">拍照</string>
    <string name="tpl_picture">从相册获取</string>

    <string name="tpl_change_user_name_title">更改名字</string>
    <string name="tpl_change_user_note_title">更改备注</string>
    <string name="tpl_input_user_name_hint">好名字可以让你的朋友更容易记住你</string>
    <string name="tpl_input_user_note_hint">自定义备注信息，给你带来更多吸引</string>

    <string name="tpl_no_sdcard">sdcard 卡不存在</string>
    <string name="tpl_msg_login_hint">请输入手机号码</string>
    <string name="tpl_verify_code_hint">请输验证码</string>
    <string name="tpl_get_verify_code">获取验证码</string>
    <string name="tpl_send_verify_code">检验验证码</string>
    <string name="signup_success">注册成功</string>
    <string name="signup_failed">注册失败</string>
</resources>
